<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        app:title="@string/app_name"
        app:titleCentered="true"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/hamburguer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/boasVindas"
        android:text="@string/texto_boas_vindas"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo"
        style="@style/EstiloTexto" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="370dp"
        android:layout_height="48dp"
        android:autofillHints="@string/nome"
        android:hint="@string/nome"
        android:inputType="text|textAutoComplete|textCapCharacters"
        android:maxLength="200"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boasVindas" />

    <TextView
        android:id="@+id/textoOpcionais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_opcionais"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editNome"
        style="@style/EstiloTexto" />


    <CheckBox
        android:id="@+id/checkOpcional1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcional1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoOpcionais" />

    <CheckBox
        android:id="@+id/checkOpcional2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/opcional2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/checkOpcional1"
        app:layout_constraintTop_toTopOf="@id/checkOpcional1" />

    <CheckBox
        android:id="@+id/checkOpcional3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/opcional3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/checkOpcional2"
        app:layout_constraintTop_toTopOf="@id/checkOpcional2" />

    <TextView
        android:id="@+id/textoQuantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/texto_quantidade"
        android:textAlignment="textStart"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkOpcional3"
        style="@style/EstiloTexto" />

    <Button
        android:id="@+id/buttonMenos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menos"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textoQuantidade" />

    <TextView
        android:id="@+id/textQuantidadePedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:text="@string/quantidade_pedido"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonMenos"
        app:layout_constraintTop_toTopOf="@id/buttonMenos"
        style="@style/EstiloTexto" />

    <Button
        android:id="@+id/buttonMais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/mais"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textQuantidadePedido"
        app:layout_constraintTop_toBottomOf="@+id/textoQuantidade" />

    <TextView
        android:id="@+id/textValorTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valor_total"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textQuantidadePedido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonMais"
        style="@style/EstiloTexto" />

    <Button
        android:id="@+id/buttonFazerPedido"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="20dp"
        android:text="@string/fazer_Pedido"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/textValorTotal"
        app:layout_constraintTop_toBottomOf="@+id/textValorTotal" />

</androidx.constraintlayout.widget.ConstraintLayout>